# INFOF423_DataMining

./: .gitignore  first_figure.html  gitCommands.txt  output.txt  pyproject.toml
Adel_temp/: 0_under_treshold.txt  1_between_treshold.txt  2_over_treshold.txt  Avancement.txt  Vehicule_ID_Issues.txt
Advancement/: Adel_advancement.txt  Auloin_advancements.txt  Musti_advancements.txt  ToDo.txt  bonus.txt  questions.txt
src/: 4.2.0  anomaly_detector.ipynb  dashboard.py  data_exploration.ipynb  data_manager.py  main.py  plotly_test.py  store.py  utils.py
src/assets/: style.css
