[tool.poetry]
name = "infof423-datamining"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
darts = "^0.26.0"
pyod = "^1.1.2"
itables = "^1.6.2"
dash = "^2.14.1"
dash-mantine-components = "^0.12.1"
dash-leaflet = "^1.0.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
